// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textDecorationSkipBox renders 0 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: 0;
  text-decoration-skip-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 0;
  text-decoration-skip-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 0;
  text-decoration-skip-box: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 0;
  text-decoration-skip-box: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders function 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: hasnot;
  text-decoration-skip-box: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: has;
  text-decoration-skip-box: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: hasnot;
  text-decoration-skip-box: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: has;
  text-decoration-skip-box: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: invalid.path.1;
  text-decoration-skip-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: invalid.path.1;
  text-decoration-skip-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: invalid.path.1;
  text-decoration-skip-box: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: invalid.path.1;
  text-decoration-skip-box: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders negative number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: -54881;
  text-decoration-skip-box: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: -54881;
  text-decoration-skip-box: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: -42365;
  text-decoration-skip-box: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: -42365;
  text-decoration-skip-box: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: January;
  text-decoration-skip-box: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: January;
  text-decoration-skip-box: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: July;
    text-decoration-skip-box: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: July;
    text-decoration-skip-box: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: April;
  text-decoration-skip-box: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: January;
    text-decoration-skip-box: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: April;
  text-decoration-skip-box: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: January;
    text-decoration-skip-box: January;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-text-decoration-skip-box: July;
    text-decoration-skip-box: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-text-decoration-skip-box: July;
    text-decoration-skip-box: July;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: September;
    text-decoration-skip-box: September;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: November;
    text-decoration-skip-box: November;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: August;
    text-decoration-skip-box: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: January;
    text-decoration-skip-box: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-text-decoration-skip-box: January;
    text-decoration-skip-box: January;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: December;
    text-decoration-skip-box: December;
  }
}

@media January {
  .c0 {
    -webkit-text-decoration-skip-box: April;
    text-decoration-skip-box: April;
  }
}

@media April {
  .c0 {
    -webkit-text-decoration-skip-box: May;
    text-decoration-skip-box: May;
  }
}

@media June {
  .c0 {
    -webkit-text-decoration-skip-box: June;
    text-decoration-skip-box: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: 54881;
  text-decoration-skip-box: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 54881;
  text-decoration-skip-box: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 42365;
  text-decoration-skip-box: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: 42365;
  text-decoration-skip-box: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders string 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: July;
  text-decoration-skip-box: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: June;
  text-decoration-skip-box: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: June;
  text-decoration-skip-box: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textDecorationSkipBox renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textDecorationSkipBox renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-text-decoration-skip-box: DarkSlateBlue;
  text-decoration-skip-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: DarkSlateBlue;
  text-decoration-skip-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: DarkSlateBlue;
  text-decoration-skip-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-text-decoration-skip-box: DarkSlateBlue;
  text-decoration-skip-box: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
